# A-I-ds

./: .gitignore  assess_weights.cbm  compose.yaml
.github/workflows/: pipeline.yml  web-deploy.yml  web-lint.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml  shell.nix
backend/app/: app.py  schemas.py  settings.py  state.py
backend/app/api/: example.py  router.py
backend/app/models/: plan.py
backend/app/services/: campaign.py
backend/app/storage/: models.py  postgres_session.py  redis_session.py  unit_of_work.py
backend/app/utils/: dependencies.py  repository.py
frontend/: Dockerfile  createGeojson.js  index.html  index.js  main.js  map.html  map.js  package.json
frontend/src/: createGeojson.js  index.html  index.js  map.html  map.js
web/: Makefile  README.md  docker-compose-dev.yml  pyproject.toml
web/alembic/: env.py
web/app/: app.py  state.py
web/app/templates/: main.html
web/app/utils/: dependencies.py
web/app/views/: example.py
