[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["BeaverNotACat <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.9.0"
asyncpg = "^0.29.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
uvicorn = "^0.30.1"
pykan = "^0.0.5"
matplotlib= "3.6.2"
numpy= "1.24.4"
scikit_learn= "1.1.3"
setuptools= "65.5.0"
sympy= "1.11.1"
torch= "2.2.2"
tqdm= "4.66.2"
sqlalchemy = "^2.0.31"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.10"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
